# rust-template

./: Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs  build_opts.yml
abi/src/pb/: gen.rs
assets/: Cargo.toml
fixtures/: Cargo.toml
macros/: Cargo.toml
network/: Cargo.toml
protobuf/: README.md  api.proto  error.proto
test-utils/: Cargo.toml
utils/: Cargo.toml
