[package]
name = "abi"
version = "0.1.0"
authors = ["Li Xiaobin <l_xb@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.10"
prost-helper = "0.6"
prost-types = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

macros = { path = "../macros" }

[dev-dependencies]
anyhow = "1"

fixtures = { path = "../fixtures" }

[build-dependencies]
prost-build-config = "0.4"
serde_yaml = "0.8"
