[package]
name = "test-utils"
version = "0.1.0"
authors = ["Li Xiaobin <l_xb@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockito = "0.30"

abi = { path = "../abi" }
fixtures = { path = "../fixtures" }
utils = { path = "../utils" }
